--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
 #Defines de directory where Postgres data is stored
 POSTGRES_DB=<db name>
 POSTGRES_DATA_DIR=~/dev/postgres/data
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=<password>
 POSTGRES_USER=<user>
 PORT=<choose the api port number>
 POSTGRES_HOST=localhost
+DATABASE_URL="postgresql://<postgres user>:<postgress password>@<postgres host>:5432/<postgres database>"
