--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
 version: '3.1'
 services:
-  postgres:
-    container_name: ${POSTGRES_DB}-postgres
-    image: postgres:13.3-alpine
-    restart: always
+  # postgres:
+  #   container_name: ${POSTGRES_DB}-postgres
+  #   image: postgres:13.3-alpine
+  #   restart: always
+  #   volumes:
+  #     - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER}      
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #   ports:
+  #     - "5432:5432"
+  mongo:
+    container_name: ${MONGODB_DB}-mongodb
+    image: mongo
     volumes:
-      - ${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}      
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    - ${MONGO_DATA_DIR}:/data/db
     ports:
-      - "5432:5432"
+    - "27017:27017"
 
 networks:
   default:
