--- a/package.json
+++ b/package.json
@@ -25,27 +25,28 @@
     "migration:revert": "npm run typeorm:cli -- migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "^8.0.4",
+    "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^4.8.1",
-    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/swagger": "^5.0.4",
+    "@nestjs/typeorm": "^8.0.1",
     "bcrypt": "^5.0.1",
     "helmet": "^4.6.0",
+    "mongodb": "3.6.10",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/cli": "^8.0.2",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.4",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
